--- a/GaussianElimination/Readme
+++ b/GaussianElimination/Readme
@@ -1,2 +1,2 @@
 This was a Csc course project which was focused on pointer manipulation in order to perform Gaussian
-Elimination. This was completed During Fall of 2017 
+Elimination. This was completed During Fall of 2017. You can run this via compiling the getest.c with gcc. GaussianElimination.c is intended to be used as a library.
