--- a/PythonChessPlayer/readme
+++ b/PythonChessPlayer/readme
@@ -1,1 +1,4 @@
-This folder contains a basic python chess player which was an exercise in implementing stacks queues and heaps to create branching descision making program.
+This folder contains a basic python chess player which was an exercise in implementing stacks queues and heaps to create branching descision making program. 
+
+
+Interpreting duelChess.py (with chesslib.py in the same folder) will allow you to play chess against the basic player.
