--- a/PythonChessPlayer/PythonTicTacToe/readme
+++ b/PythonChessPlayer/PythonTicTacToe/readme
@@ -1,1 +1,2 @@
 This folder contains a TicTacToe player which is written in python.
+This was the intial proeject which was used as the foundation for the Chess player.
